--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@inertiajs/vue3": "^1.0.14",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vueuse/core": "^10.7.2",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
